# qmc2

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: mingw_x86_64.yml  wasm.yml
QMC2-crypto/: CMakeLists.txt
QMC2-crypto/include/qmc2-crypto/: IKeyDec.h  IStreamEncryptAndDecrypt.h  KeyDec.h  QMCDetection.h  StreamCencrypt.h  __endian_helper.h
QMC2-crypto/qmc2-crypto/: KeyDec.cpp  QMCDetection.cpp  StreamCencrypt.cpp
QMC2-decoder/: CMakeLists.txt  QMC2-decoder.cpp
QMC2-wasm/: CMakeLists.txt  QMC2-wasm.cpp  QMC2-wasm.h  README.md  build-wasm
QMC2-wasm/npm/: .gitignore  QMC2-legacy.d.ts  QMCCrypto.d.ts  README.md  package-lock.json  package.json
cmake/: mingw-i686-linux.cmake  mingw-x86_64-linux.cmake
public/: .gitignore  app.css  app.js  index.html  source.html
